compilateurMinCaml/tests/syntax/valid/LE.ml
print_int (if 1 <= 2 then 101 else 4)